# GU_Cpp_homeworks

./: .gitignore
Cpp_OOP/: .gitignore  (+1 more)
Cpp_difficult_moments/hw_8/: CMakeLists.txt
Cpp_difficult_moments/hw_8/src/: helper.cpp  helper.h  main.cpp
Cpp_difficult_moments/hw_8/tests/: test.cpp
Cpp_network/cpp-network-tasks/src/l2/pcap_sniffer_my/: CMakeLists.txt  main.cpp
Cpp_network/cpp-network-tasks/src/l2/pcap_sniffer_my/pcappp/: README.release  install.sh
Cpp_patterns_GOF/SBomberProject/: BigPlane.cpp  Bomb.cpp  BombDecorator.cpp  BombIterator.cpp  CMakeLists.txt  CollisionDetectorA.cpp  CollisionDetectorImplA.cpp  ColorPlane.cpp  CustomHouse.cpp  CustomHouseBuilderA.cpp  CustomHouseBuilderB.cpp  DeleteDynamicObjCommand.cpp  DeleteStaticObjCommand.cpp  DropBombCommand.cpp  DropBombDecoratorCommand.cpp  FileLogger.cpp  FileLoggerSingletone.cpp  House.cpp  LevelGUI.cpp  LogVisitor.cpp  LoggerSingleton.cpp  MyTools.cpp  NotifiableObject.cpp  Plane.cpp  README.MD  SBomber.cpp  SBomberProject.cpp  SbomberImpl.cpp  Tank.cpp  TankAdaptee.cpp  TanksPlaneMediator.cpp
Cpp_patterns_GOF/SBomberProject/include/: AbstractBomb.h  AbstractCommand.h  BigPlane.h  Bomb.h  BombDecorator.h  BombIterator.h  CollisionDetector.h  CollisionDetectorA.h  CollisionDetectorImpl.h  CollisionDetectorImplA.h  ColorPlane.h  CustomHouse.h  CustomHouseBuilder.h  CustomHouseBuilderA.h  CustomHouseBuilderB.h  DeleteDynamicObjCommand.h  DeleteStaticObjCommand.h  DestroyableGroundObject.h  DropBombCommand.h  DropBombDecoratorCommand.h  DynamicObject.h  FileLogger.h  FileLoggerSingletone.h  GameObject.h  House.h  HouseDirector.h  LevelGUI.h  LogVisitor.h  LoggerSingleton.h  Mediator.h  MyTools.h  NotifiableObject.h  Observable.h  Observer.h  Plane.h  SBomber.h  SbomberImpl.h  Tank.h  TankAdaptee.h  TankAdapter.h  (+2 more)
(+148 files in other folders)
